@@ -2,6 +2,11 @@ vininfo changelog
 =================
 
 
+Unreleased
+----------
++ Model year check in Vin.verify_checksum() is now optional, on by default (see #19).
+
+
 v1.6.0 [2021-08-30]
 -------------------
 + WMI dict is updated.
